--- a/trunk/netpanzer/src/ChangeLog
+++ b/trunk/netpanzer/src/ChangeLog
@@ -3,6 +3,7 @@
  is overloaded, but laste C++ draft doesn't allow to return 0 from such an
  overloaded new.) I added exceptions and lots of try {} catch{} blocks, let's
  hope I didn't miss something.
+-eleminated isValidPtr, Util.hpp and GOTTA_HAVE_IT from codewiz.hpp
 
 8-Sep-2003 by Matze Braun
 -added some basic music plying support (all files in sfx/music are played in
