--- a/trunk/netpanzer/src/ChangeLog
+++ b/trunk/netpanzer/src/ChangeLog
@@ -1,3 +1,6 @@
+12-Sep-2003 by Matze Braun
+-use the physfs for the colortable cache now
+
 11-Sep-2003 by Matze Braun
 -removed more win32 specific code
 -removed #ifdef USE_SDLs, the code is enabled by default now
