applied sound patch by Ivo (thanks alot)

--- a/trunk/netpanzer/src/ChangeLog
+++ b/trunk/netpanzer/src/ChangeLog
@@ -1,3 +1,6 @@
+14-Sep-2003 by Matze Braun
+-applied sound patch by Ivo Danihelka (thanks alot)
+
 12-Sep-2003 by Matze Braun
 -use the physfs for the colortable cache now
 -removed lots of unused code from Surface class
