--- a/trunk/netpanzer/src/ChangeLog
+++ b/trunk/netpanzer/src/ChangeLog
@@ -1,3 +1,8 @@
+16-Sep-2003 by Ivo Danihelka
+-Alt+Enter don't start chat now
+-'d' display damage
+-cleaning code with valgrind
+
 15-Sep-2003 by Matthias Braun
 -removed the GetConnectionTypeView menu. We're only using tcp/ip.
 -made the Join view working again
