Added bots, press 'b' for enable

--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,6 @@
+23-Sep-2003 by Ivo Danihelka
+-Added bots, press 'b' for enable
+
 22-Sep-2003 by Matthias Braun
 -Commited automake stuff from Ivo and merged his autoconf script with mine
 -small cleanups/compile fixes
