--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,8 @@
+24-Sep-2003 by Matthias Braun
+-converted lots of code to use physfs (not completely done yet)
+-removed the automake system
+-added a jam build system
+
 23-Sep-2003 by Ivo Danihelka
 -Added bots, press 'b' for enable
 
