--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -1,45 +1,15 @@
--Fix or completely remove the Joystick code. (IMO we should remove it, because
- controling this game with joystick isn't a good idea) - OK
--Fix FileList.cpp to use only ANSI-C functions, so that we don't need the win32
- _splitpath anymore. The same is in UtilInterface.cpp - OK
--Fix PackedSurface.cpp, Surface.cpp to not use _findfirst anymore... same in
- MapsManager.cpp - OK
--Write new timercode the assembler cTimeStamp.cpp isn't portable - OK
--Write new code instead of the assembler in Span.cpp and Surface.cpp - OK
-  (though this could be speed optimized a bit more...)
--ParticleInterface.cpp contains some DirectSound code which needs to be replaced
- - OK
--GroundExplosionParticle, RadarPingParticle2D and DirtKickParticle2D seem to
- miss some Surface variables, where are these defined? - seems OK
--PUFF_PARTICLE_TYPE isn't defined in SmokingTrajectoryParticle - Old code? -
-    yes, OK
--write a new version of DDHardSurface - OK
--network code probably needs a bigger rewrite since directplay is not available
- on unix. - OK (for now)
--look at all the directx code in GameManager.cpp - OK
--need new mousecode in MouseInterface.cpp - OK
--need new directplay code in NetworkClientDPlay.cpp, NetworkServerDPlay.cpp -
-  not needed, these files aren't used anymore - OK
--need new code instead of winsock in NetworkClientWinsock.cpp - OK
--rewrite all the windows specific code in NetPanzer/Core - OK (SDL specific
- code is in NetPanze/Core/unix now)
--check if the functions and stuff in Lib/terminate.cpp is really needed (looks
- like some strange hacks for the logging functions to me) Can we remove
- this strange code? - Yes we can :) OK
--Fix the win32 stuff in Lib/Util/UtilInterface.cpp - OK
--rewrite win32 event loop to use a SDL event loop. Don't forget to pump mouse
- events to MouseInterface then. - OK
-
 Todo before beta release:
--Fix the problems with mainmenu in >640x480 resolution
+-Fix the problems with mainmenu in >640x480 resolution - OK
 -Eventually trim down option windows to only necessary stuff (this can wait
-    for after the release though)
+    for after the release though) - OK
 -Complete GameConfig::save and GameConfig::load functions
 -Test it (esp. with more than 2 players)
--Make it compiling in mingw again.
--Fix all warnings in the sourcecode
+-Make it compiling in mingw again. - droped from my side, if noone volunteers
+ then this release will be unix only... (I really tried with cygwin, but got
+ bored since I didn't even manage to compile physfs and SDL_mixer correctly)
+-Fix all warnings in the sourcecode - OK
 -Add configure script (autoconf) which checks for all prerequesits - OK
--Create "make install" target (also a "make uninstall"?)
+-Create "make install" target (also a "make uninstall"?) - OK (jam system now)
 -Write a README
 -Test it, esp. with more than 2 players and test a complete
     getsource/configure/build/install/play cycle. We should be able to find
