--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,7 @@
+05-Oct-2003 by Matthias Braun
+-did some more code cleanup. all the Rect and XY classes cleaned up a bit and
+ finally removed the codewiz.hpp file.
+
 04-Oct-2003 by Matthias Braun
 -rewrote the config system and completed config saving and loading
 -fixed bug where minimap could be moved outside screen
