--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -9,6 +9,7 @@
  Surface to the blit functions. C++ was evil enough to use the
  Surface::Surface(bool) constructor to create a new Surface instead of getting
  me an error.
+-fixed another crasher when outpost was selected from a strange position
 
 11-Oct-2003 by Matthias Braun
 -added a release script
