--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,6 @@
+21-Oct-2003 by Matthias Braun
+-fixed the missing unit pictures in build menu
+
 14-Oct-2003 by Matthias Braun
 -fixed crash when client disconnects or connection is lost
 
