--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,8 @@
+22-Oct-2003 by Ivo Danihelka
+-split GameManager to BotGameManager, DedicatedGameManager
+ and PlayerGameManager
+-bot can be started from command line (-b option)
+
 21-Oct-2003 by Matthias Braun
 -fixed the missing unit pictures in build menu
 
