--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,6 @@
+06-Nov-2003 by Matthias Braun
+-cleanups and imporvements to the IRC Lobby code
+
 05-Nov-2003 by Matthias Braun
 -added manpage contributed by Bartosz Fesnky <fenio@o2.pl>
 
