--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,5 +1,6 @@
 07-Nov-2003 by Matthias Braun
 -fixed HOM effect while joining server
+-added new poland flag by Bartosz Fenski
 
 06-Nov-2003 by Matthias Braun
 -cleanups and imporvements to the IRC Lobby code
