docu update by Bartosz Fenski

--- a/trunk/netpanzer/docs/netpanzer.6
+++ b/trunk/netpanzer/docs/netpanzer.6
@@ -35,6 +35,9 @@ show version information.
 .B -d, --dedicated
 run as dedicated server.
 .TP
+.B -b, --bot=VALUE
+connect as bot to specific server.
+.TP
 .B -p, --port=VALUE
 run server on a specific port.
 .TP
