disable server port option since it doesn't work yet

--- a/trunk/netpanzer/docs/netpanzer.6
+++ b/trunk/netpanzer/docs/netpanzer.6
@@ -38,11 +38,11 @@ run as dedicated server.
 .B -b, --bot=VALUE
 connect as bot to specific server.
 .TP
-.B -p, --port=VALUE
-run server on a specific port.
-.TP
 .B -g, --debug
 enable debug output.
+.B     --lobby-server=VALUE
+Use the specified irc server as lobby server. You can use an empty value to
+disable lobby announcement.
 .PD
 
 .SH "AUTHORS"
