* Added proxyserver, proxyserveruser,proxyserverpass options, have to edit xml to use them for now, so you can play from behind a firewall if you run the server on port 443, most proxys allow port 443(https). * reenabled -p port option, should work now. * fixed not joining lobby if you host a game * changed no lobby option to lobby_server=none because the option class couldn't tell the difference between an empty string from no option at all.

--- a/trunk/netpanzer/docs/netpanzer.6
+++ b/trunk/netpanzer/docs/netpanzer.6
@@ -41,7 +41,7 @@ connect as bot to specific server.
 .B -g, --debug
 enable debug output.
 .B     --lobby-server=VALUE
-Use the specified irc server as lobby server. You can use an empty value to
+Use the specified irc server as lobby server. You can use 'none' to
 disable lobby announcement.
 .PD
 
