added slovakian flag by Ales <ales@chello.sk>

--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,6 @@
+18-Nov-2003 by Matthias Braun
+-added slovakian flag by Ales <ales@chello.sk>
+
 12-Nov-2003 by Matthias Braun
 -fixed a bug where the server browser wouldn't display the correct usercount for
  servers
