--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,7 @@
+19-Nov-2003 by Matthias Braun
+-several robustness fixes to editor tileset code
+-some small UI improvements for the editor
+
 18-Nov-2003 by Matthias Braun
 -added slovakian flag by Ales <ales@chello.sk>
 
