--- a/trunk/netpanzer/TODO
+++ b/trunk/netpanzer/TODO
@@ -24,6 +24,7 @@ solution would be transfering of unknown flags.
 -the unit profiles should be possible to set on the server. They should be
 distributed to the clients while they connect.
 -limit fps to a fixed value so that we are nicer to the CPU on the system.
+-make it possible to have different colors for different players
 
 *** Tools
 -write a map and tileset editor
@@ -51,3 +52,26 @@ distributed to the clients while they connect.
 -create UDP broadcast code for announcing servers in LANs
 -make it possible to configure the mapcycle
 -add a (readline based?) serverconsole
+
+*** gameplay
+Note that these are just random idea. We should be very careful when tuning the
+gameplay. 1 of the strengths of netpanzer is that it is simple to understand
+andplay. We should try hard not to destroy this by adding too many options.
+
+-Add a mode where nothing is produced (maps without outposts). Players can
+ select some tanks based on a points system and can then fight with this fixed
+ amount of tanks
+-Add different types of outposts. (only selected types of panzers, possibility
+        to repair units at helipad, ...)
+-Add possibilities to repair units (helipad at outpost or repair tank)
+-Add fog of war (eventually with special things like radar jammers or radar
+        tanks?)
+-add infantry? anti-tank style ones, and anti-infantry ones?
+-different terrain types (some terrain where you can move slower) maybe also
+ with a heightmap.
+-more map elements? bridges that can be destroyed (and repaired?)
+-a unit that can deploy mines
+-special game modes and objectives? capture the flag or "escort a VIP", or
+ defend an objective would be things that come to mind
+-make panzers always hit their targets instead of missing moving units?
+
