--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,13 @@
+10-Dec-2003 by Matthias Braun
+-fixed crash when target unit of an attacking unit was destroyed too early
+
+05-Dec-2003 by Matthias Braun
+-added network paket debugger class
+-removed some more unused code from the Surface class
+
+04-Dec-2003 by Matthias Braun
+-eleminated usage of cGrowList class and replaced it with std::vector
+
 01-Dec-2003 by Matthias Braun
 -eleminated a few more valgrind warnings
 -converted an ArrayTemplate in ObjectiveInterface to an std::vector
