--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,6 @@
+21-Dec-2003 by Matthias Braun
+-rewrote some parts of the UnitList and Unit synchronisation code
+
 10-Dec-2003 by Matthias Braun
 -fixed crash when target unit of an attacking unit was destroyed too early
 
