implement DESTDIR in jam rules

--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,6 @@
+11-Jan-2003 by Matthias Braun
+-implement possibility to set DESTDIR for installation
+
 10-Jan-2003 by Matthias Braun
 -implemented tiletemplate view in editor
 -fixed several bugs and problems in the editor
