added netpanzer icon and jam rules to install icons

--- a/trunk/netpanzer/ChangeLog
+++ b/trunk/netpanzer/ChangeLog
@@ -1,3 +1,6 @@
+12-Jan-2003 by Matthias Braun
+-added netpanzer icon and jam rules to install icons
+
 11-Jan-2003 by Matthias Braun
 -implement possibility to set DESTDIR for installation
 
